--- a/app/src/main/res/layout/item_menu_grid.xml
+++ b/app/src/main/res/layout/item_menu_grid.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="8dp"
-    android:layout_margin="8dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginHorizontal="8dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
