Add Detail Layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#878787</color>
-    <color name="app_color_primary">#006e1a</color>
+    <color name="app_color_primary">#59b55a</color>
     <color name="app_color_on_primary">#FF0000</color>
     <color name="app_color_primary_container">#92fa8d</color>
     <color name="app_color_on_primary_container">#36404B</color>
